# a121-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain.toml  rust-toolchain.toml.bak
.cargo/: config.toml
.github/: DOCS.md  codecov.yml  dependabot.yml
.github/workflows/: check.yml  example-xe125-arm_gcc.yml  example-xe125-sys_gcc.yml  example-xe125_armgcc.yml  example-xe125_nightly-sys_gcc.yml  lib_check-sys_arm_gcc.yml  nostd.yml  scheduled.yml
c_src/: wrapper.c  wrapper.h
examples/esp32c6-hal/: Cargo.toml
examples/esp32c6-hal/.cargo/: config.toml
examples/esp32c6-hal/acc/: README.md
examples/esp32c6-hal/src/: main.rs  mulsc3.rs  spi_adapter.rs
examples/esp32s3/: Cargo.toml
examples/esp32s3-hal/: Cargo.toml
examples/esp32s3-hal/.cargo/: config.toml
examples/esp32s3-hal/src/: main.rs
examples/esp32s3/src/: main.rs
examples/xe121_l433rc/: Cargo.toml
examples/xe121_l433rc/.cargo/: config.toml
examples/xe121_l433rc/src/: adapter.rs  io.rs  main.rs
examples/xe125/: Cargo.toml  rust-toolchain.toml
examples/xe125-nightly/: Cargo.toml
examples/xe125-nightly/.cargo/: config.toml
examples/xe125-nightly/src/: adapter.rs  lib.rs  main.rs
examples/xe125/.cargo/: config.toml
examples/xe125/src/: adapter.rs  main.rs
rss/LICENSES/: license_acconeer.txt  license_cjson.txt  license_printf.txt
rss/include/: acc_alg_basic_utils.h  acc_config.h  acc_config_subsweep.h  acc_definitions_a121.h  acc_definitions_common.h  acc_detector_distance.h  acc_detector_distance_definitions.h  acc_detector_presence.h  acc_hal_definitions_a121.h  acc_processing.h  acc_rss_a121.h  acc_sensor.h  acc_version.h  bindgen.h  inttypes.h  stdio.h
rss/include/arm/: acc_detector_presence.h  stdlib.h
rss/include/xtensa/: acc_control_helper.h  acc_hal_integration_a121.h  acc_integration.h  acc_integration_log.h  acc_processing.h  acc_processing_helpers.h  acc_sensor.h  example_bring_up.h  example_control_helper.h  example_detector_distance.h  example_detector_distance_calibration_caching.h  example_detector_distance_with_iq_data_print.h  example_detector_presence.h  example_detector_presence_multiple_configurations.h  example_diagnostic_test.h  example_processing_amplitude.h  example_processing_coherent_mean.h  example_processing_noncoherent_mean.h  example_processing_peak_interpolation.h  example_processing_static_presence.h  example_processing_subtract_adaptive_bg.h  example_service.h  example_service_calibration_caching.h  example_service_multiple_configurations.h  example_service_sensor_off.h  example_service_subsweeps.h
src/: config.rs  detector.rs  hal.rs  lib.rs  libm.rs  memory.rs  num.rs  processing.rs  radar.rs  rss_bindings.rs  sensor.rs
src/config/: error.rs  frame_rate.rs  hwaas.rs  prf.rs  profile.rs  subsweep.rs
src/detector/: distance.rs  presence.rs
src/detector/distance/: config.rs  results.rs
src/detector/presence/: config.rs  results.rs
src/processing/: metadata.rs
src/radar/: error.rs  version.rs
src/sensor/: calibration.rs  data.rs  error.rs
