[package]
name = "esp32s3-hal-rss-demo"
version = "0.1.0"
authors = ["Noah"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
debug = true

[dependencies]
esp32s3-hal = { version = "0.15.0", features = ["async", "eh1", "embassy", "embassy-time-timg0", "embassy-executor-thread"] }
esp-backtrace = { version = "0.11.0", features = ["esp32s3", "panic-handler", "exception-handler", "println"] }
esp-println = { version = "0.9.0", features = ["esp32s3", "defmt-espflash"] }
defmt = "0.3.5"

a121-rs = { path = "../../", features = ["distance"] }
embedded-hal-bus = { version = "0.1.0", features = ["async"] }
embedded-hal = "1.0.0"
tinyrlibc = { git = "https://github.com/rust-embedded-community/tinyrlibc.git", version = "0.3.0" }
libm = { version = "0.2.8", default-features = false }
embedded-alloc = "0.5.1"
embassy-executor = { version = "0.5.0", features = ["nightly", "integrated-timers", "executor-thread"] }
static_cell = { version = "2.0.0", features = ["nightly"] }
embassy-time = "0.3.0"
num = { version = "0.4.1", default-features = false, features = ["libm"] }
