[package]
name = "xe125-nightly"
version = "0.1.0"
edition = "2021"

[lib]
bench = false
test = false

[dependencies]
a121-rs = { path = "../../", features = ["distance", "nightly-logger"] }

panic-probe = { version = "1.0.0", features = ["print-defmt"] }

cortex-m = { version = "0.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = "0.7"

defmt = "1.0.1"
defmt-rtt = "1.0.0"

embedded-hal = "1.0.0"
embassy-executor = { version = "0.8.0", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.4.0", features = [ "defmt", "tick-hz-32_768" ]}
embassy-stm32 = { version = "0.2.0", features = [ "defmt", "unstable-pac", "stm32l431cb", "memory-x", "time-driver-any", "exti", "chrono"] }
embedded-hal-bus = { version = "0.3.0", features = ["defmt-03"] }

talc = { version = "4.4", default-features = false, features = ["lock_api"] }
spin = "0.10.0"
tinyrlibc = { version = "0.5", features = ["alloc"] }

[profile.dev]
lto = true
codegen-units = 1

[profile.release]
debug = 2
lto = true
codegen-units = 1
opt-level = "s"

[[bin]]
name = "distance"
bench = false
test = false
