[package]
name = "xe125-nightly"
version = "0.1.0"
edition = "2021"

[lib]
bench = false
test = false

[dependencies]
a121-rs = { path = "../..", features = ["distance", "nightly-logger"] }

panic-probe = { version = "1.0.0", features = ["print-defmt"] }

cortex-m = { version = "0.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = "0.7"

defmt = "1.0.1"
defmt-rtt = "1.0.0"

embedded-hal = "1.0.0"
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = [ "defmt", "tick-hz-32_768" ]}
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", features = [ "defmt", "unstable-pac", "stm32l431cb", "memory-x", "time-driver-any", "exti", "chrono"] }
embedded-hal-bus = { version = "0.3.0"}

linked_list_allocator = "0.10.5"

[profile.dev]
lto = true
codegen-units = 1

[profile.release]
debug = 2
lto = true
codegen-units = 1
opt-level = "s"

[[bin]]
name = "distance"
bench = false
test = false
