[package]
name = "xe125-hal"
version = "0.1.0"
edition = "2021"

[dependencies]
a121-rs = { path = "../../../a121-rs" }

panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"

defmt = "0.3.5"
defmt-rtt = "0.4.0"

embedded-hal = "1.0.0"
embassy-executor = { version = "0.5.0", features = [ "task-arena-size-4096", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers" ] }
embassy-time = { version = "0.3.0", features = [ "defmt", "defmt-timestamp-uptime", "tick-hz-32_768" ]}
embassy-stm32 = { version = "0.1.0", features = [ "defmt", "unstable-pac", "stm32l431cb", "memory-x", "time-driver-any", "exti", "chrono"] }
embassy-sync = "0.5"
embassy-embedded-hal = { version = "0.1", features = ["defmt"] }
embedded-hal-bus = { version = "0.1.0", features = ["defmt-03"] }

libm = { version = "0.2.8", default-features = false }

static_cell = "2.0.0"


[profile.dev]
lto = true
codegen-units = 1

[profile.release]
debug = 2
codegen-units = 1